--- a/paper/references.bib
+++ b/paper/references.bib
@@ -9,57 +9,6 @@
     url = {https://www.R-project.org/},
   }
   
-  
-@Article{thereferencecanbewhatever,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }  
-  
-  
-@Manual{citeLahman,
-    title = {{Lahman: Sean `Lahman' Baseball Database}},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
-  
-  
-@article{gebru2021datasheets,
-  title={Datasheets for datasets},
-  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
-  journal={Communications of the ACM},
-  volume={64},
-  number={12},
-  pages={86--92},
-  year={2021},
-  publisher={ACM New York, NY, USA}
-}
-
-@Misc{rstanarm,
-    title = {{rstanarm: {Bayesian} applied regression modeling via {Stan}}},
-    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
-    year = {2022},
-    url = {https://mc-stan.org/rstanarm/},
-  }
-  
-@Manual{palmerpenguins,
-    title = {{palmerpenguins: Palmer Archipelago (Antarctica) penguin data}},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
-    year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
-  }
-  
-  
 @book{tellingstories,
     title = {Telling Stories with Data},
     author = {Rohan Alexander},
@@ -68,12 +17,50 @@
     url = {https://tellingstorieswithdata.com/}
   }  
   
-  
+@misc{washingtonpost_school_shootings,
+  author       = {The Washington Post},
+  title        = {Data on School Shootings},
+  year         = {2021},
+  url          = {https://github.com/washingtonpost/data-school-shootings/tree/master},
+  note         = {Accessed: 2024-12-03}
+}
 
-@Manual{shelter,
-    title = {Deaths of Shelter Residents},
-    author = {{Toronto Shelter & Support Services}},
-    year = {2024},
-    note = {As accessed 2024-10-02.},
-    url = {https://open.toronto.ca/dataset/deaths-of-shelter-residents/},
-  }  
+@manual{R_dplyr,
+  title        = {dplyr: A Grammar of Data Manipulation},
+  author       = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year         = {2023},
+  note         = {R package version 1.1.3},
+  url          = {https://CRAN.R-project.org/package=dplyr}
+}
+
+@manual{R_tidyr,
+  title        = {tidyr: Tidy Messy Data},
+  author       = {Hadley Wickham and Lionel Henry},
+  year         = {2023},
+  note         = {R package version 1.3.0},
+  url          = {https://CRAN.R-project.org/package=tidyr}
+}
+
+@manual{R_maps,
+  title        = {maps: Draw Geographical Maps},
+  author       = {Raymond J. Brownrigg and Thomas P. Minka and Nicholas Lewin-Koh and Roger Bivand},
+  year         = {2023},
+  note         = {R package version 3.4.1},
+  url          = {https://CRAN.R-project.org/package=maps}
+}
+
+@manual{R_ggplot2,
+  title        = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author       = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year         = {2023},
+  note         = {R package version 3.4.3},
+  url          = {https://CRAN.R-project.org/package=ggplot2}
+}
+
+@manual{R_scales,
+  title        = {scales: Scale Functions for Visualization},
+  author       = {Hadley Wickham and Dana Seidel},
+  year         = {2023},
+  note         = {R package version 1.2.1},
+  url          = {https://CRAN.R-project.org/package=scales}
+}
